[package]
name = "cli-mdt-parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[features]
default = ["gpl-dependencies"]
legacy-strings-decoding = ["dep:weakauras-codec-lib-compress"]
gpl-dependencies = ["legacy-strings-decoding"]

[dependencies]
clap = "4"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
serde_json = "1"
weakauras-codec-base64 = "0.1"
weakauras-codec-lib-compress = { version = "0.1", optional = true }
weakauras-codec-ace-serialize = "0.1"
weakauras-codec-lua-value = { version = "0.1", features = ["indexmap", "serde"] }

[profile.release]
strip = true
